--- a/project.ipynb
+++ b/project.ipynb
@@ -34472,6 +34472,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -43442,6 +43449,172 @@
     "\n",
     "# Show figure\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>country</th>\n",
+       "      <th>state</th>\n",
+       "      <th>gdp</th>\n",
+       "      <th>gdp_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>1</td>\n",
+       "      <td>the United States</td>\n",
+       "      <td>America</td>\n",
+       "      <td>543300000000</td>\n",
+       "      <td>4.684827e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>2</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>73233967692</td>\n",
+       "      <td>6.314899e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>3</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>62225478000</td>\n",
+       "      <td>5.365647e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>4</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>59716467625</td>\n",
+       "      <td>5.149297e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>44307342950</td>\n",
+       "      <td>3.820582e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10129</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>171</td>\n",
+       "      <td>Samoa</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>807027244</td>\n",
+       "      <td>1.040774e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10130</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>172</td>\n",
+       "      <td>Sao Tome and Principe.</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>472914469</td>\n",
+       "      <td>6.098888e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10131</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>173</td>\n",
+       "      <td>Dominica</td>\n",
+       "      <td>America</td>\n",
+       "      <td>469870370</td>\n",
+       "      <td>6.059630e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10132</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>174</td>\n",
+       "      <td>Kiribati</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>199573325</td>\n",
+       "      <td>2.573775e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10133</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>175</td>\n",
+       "      <td>Tuvalu</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>48855550</td>\n",
+       "      <td>6.300601e-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10134 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       year  rank                 country    state           gdp   gdp_percent\n",
+       "0      1960     1       the United States  America  543300000000  4.684827e-01\n",
+       "1      1960     2          United Kingdom   Europe   73233967692  6.314899e-02\n",
+       "2      1960     3                  France   Europe   62225478000  5.365647e-02\n",
+       "3      1960     4                   China     Asia   59716467625  5.149297e-02\n",
+       "4      1960     5                   Japan     Asia   44307342950  3.820582e-02\n",
+       "...     ...   ...                     ...      ...           ...           ...\n",
+       "10129  2020   171                   Samoa  Oceania     807027244  1.040774e-05\n",
+       "10130  2020   172  Sao Tome and Principe.   Africa     472914469  6.098888e-06\n",
+       "10131  2020   173                Dominica  America     469870370  6.059630e-06\n",
+       "10132  2020   174                Kiribati  Oceania     199573325  2.573775e-06\n",
+       "10133  2020   175                  Tuvalu  Oceania      48855550  6.300601e-07\n",
+       "\n",
+       "[10134 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GDP_all\n",
+    "\n"
    ]
   },
   {
